# DetectZoo

./: .gitignore  CLAUDE.md  Dockerfile  METHODS_AND_MODELS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
detectzoo/: __init__.py
detectzoo/benchmarks/: __init__.py  evaluator.py
detectzoo/core/: __init__.py  base.py  registry.py
detectzoo/datasets/: __init__.py  _download.py  base.py
detectzoo/datasets/audio/: __init__.py  asvspoof2019.py  deepfake_eval_2024.py  for_dataset.py  in_the_wild.py  wavefake.py
detectzoo/datasets/image/: __init__.py  aigcdetect.py  chameleon.py  cnn_detection.py  drct2m.py  genimage.py  self_synthesis.py  univfd.py
detectzoo/datasets/text/: __init__.py  cheat.py  hc3.py  hc3_plus.py  l2r.py  m4.py  mage.py  open_llm_text.py  raid.py  turingbench.py  writing_prompts.py  xsum.py
detectzoo/detectors/: __init__.py
detectzoo/detectors/audio/: __init__.py  _anti_deepfake_common.py  aasist.py  rawgat_st.py  rawnet2.py  restssdnet.py  samo.py
detectzoo/detectors/audio/anti_deepfake_hubert/: __init__.py  detector.py
detectzoo/detectors/audio/anti_deepfake_wav2vec/: __init__.py  detector.py
detectzoo/detectors/audio/anti_deepfake_xlsr2b/: __init__.py  detector.py
detectzoo/detectors/audio/ast_asvspoof/: __init__.py  detector.py
detectzoo/detectors/audio/melody_wav2vec/: __init__.py  detector.py
detectzoo/detectors/audio/whisper_mesonet/: __init__.py  detector.py  meso_inception.py  whisper_encoder.py
detectzoo/detectors/audio/xlsr_mamba/: __init__.py  core.py  detector.py  mamba_blocks.py
detectzoo/detectors/audio/xlsr_sls/: __init__.py  detector.py
detectzoo/detectors/image/: __init__.py  _lgrad_stylegan_discriminator.py  aeroblade.py  aide.py  c2p_clip.py  cnnspot.py  cospy.py  d3.py  drct.py  fatformer.py  freqnet.py  ladeda.py  lgrad.py  manifold_bias.py  npr_deepfake.py  patchcraft.py  resnet50_binary.py  safe.py  srm_filter_kernel.py  univfd.py
detectzoo/detectors/text/: __init__.py  ada_detect_gpt.py  base.py  binoculars.py  biscope.py  coco.py  detect_gpt.py  detective.py  dna_detectllm.py  dna_gpt.py  entropy.py  fast_detect_gpt.py  gecscore.py  ghostbuster.py  glimpse.py  ide.py  imbd.py  ipad.py  irm.py  lastde.py  log_likelihood.py  log_rank.py  lrr.py  npr.py  ood_detectors.py  radar.py  raidar.py  rank.py  remodetect.py  revise_detect.py  roberta.py  text_fluoroscopy.py  tocsin.py
detectzoo/utils/: __init__.py  hf_quiet.py  io.py  logger.py  metrics.py
examples/: custom_detector.py  text_detection.py
examples/audio/: _smoke_test_audio_replicate.py  audio_replicate.py
examples/image/: image_replicate.py
examples/text/: gecscore_replicate.py  imbd_replicate.py  ood_replicate.py  text_fluoroscopy_replicate.py
reproducibility/: gecscore_replicate.py
reproducibility/audio/: _smoke_test_audio_replicate.py  audio_replicate.py
reproducibility/image/: image_replicate.py
tests/: conftest.py  test_audio_detectors.py  test_benchmarks.py  test_core.py  test_datasets.py  test_image_detectors.py  test_text_detectors.py  test_utils.py
webapp/: main.py  requirements.txt
webapp/static/: about_shell.html  app.js  index.html  style.css
