[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detectzoo"
version = "0.1.0"
description = "DetectZoo: A Unified Toolkit for AI-Generated Content Detection Across Text, Audio, and Image Modalities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["ai-detection", "deepfake", "llm", "generative-ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "accelerate>=0.20",
    "datasets>=2.14",
    "huggingface_hub>=0.16",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "rouge==1.0.1",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "torch>=2.0",
    "tqdm>=4.60",
    "transformers>=4.30",
]

[project.optional-dependencies]
datasets = [
    "modelscope>=1.9",
    "gdown>=4.0",
]
image = [
    "torchvision>=0.15",
    "Pillow>=9.0",
    "open-clip-torch>=2.20",
    "diffusers>=0.21",
    "lpips>=0.1",
    "pytorch_wavelets>=1.3",
]
audio = [
    "torchaudio>=2.0",
    "librosa>=0.10",
    "soundfile>=0.12",
]
dev = [
    "detectzoo[datasets,image,audio]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://anonymous.4open.science/r/DetectZoo-1BEC/"
Repository = "https://anonymous.4open.science/r/DetectZoo-1BEC/"
Issues = "https://anonymous.4open.science/r/DetectZoo-1BEC/issues"

[tool.setuptools.packages.find]
include = ["detectzoo*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require model downloads (deselect with '-m \"not slow\"')",
]
