[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detectzoo"
version = "0.1.0"
description = "DetectZoo: A Unified Toolkit for AI-Generated Content Detection Across Text, Audio, and Image Modalities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
keywords = ["ai-detection", "deepfake", "llm", "generative-ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.7.0",
    "huggingface-hub>=0.36.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "peft>=0.18.1",
    "rouge>=1.0.1",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
]

[project.optional-dependencies]
datasets = [
    "modelscope>=1.9",
    "gdown>=4.0",
]
image = [
    "torchvision>=0.26.0",
    "Pillow>=12.1.1",
    "open-clip-torch>=2.20",
    "diffusers>=0.21",
    "lpips>=0.1.4",
    "pytorch-wavelets>=1.3",
    "timm>=0.9.0",
]
audio = [
    "torchaudio>=2.11.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
]
dev = [
    "detectzoo[datasets,image,audio]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.5",
]

[project.urls]
Homepage = "https://anonymous.4open.science/r/DetectZoo-1BEC/"
Repository = "https://anonymous.4open.science/r/DetectZoo-1BEC/"
Issues = "https://anonymous.4open.science/r/DetectZoo-1BEC/issues"

[tool.setuptools.packages.find]
include = ["detectzoo*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require model downloads (deselect with '-m \"not slow\"')",
]
